--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for Perl module CGI::Wiki::Plugin::SpamMonkey
 0.01 Sat Apr  1 2006
     - Initial version.
 
+0.02 Sat Apr  1 2006
+    - is_spam API was wrong in initial release.
